--- a/app/bsnc_vat_0000/webapp/manifest.json
+++ b/app/bsnc_vat_0000/webapp/manifest.json
@@ -120,7 +120,8 @@
                                         "route": "BSNC_VAT_0000HObjectPage"
                                     }
                                 }
-                            }
+                            },
+                            "initialLoad": "Enabled"
                         }
                     }
                 },
