--- a/app/bsnc_vat_0000/webapp/manifest.json
+++ b/app/bsnc_vat_0000/webapp/manifest.json
@@ -17,7 +17,7 @@
         },
         "dataSources": {
             "mainService": {
-                "uri": "/service/BSNC_VAT_0000/",
+                "uri": "/service/BSNC_VAT/",
                 "type": "OData",
                 "settings": {
                     "annotations": [
