--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "cds run",
     "watch-bsnc_vat_0000": "cds watch --open bsnc_vat_0000/webapp/index.html?sap-ui-xx-viewCache=false",
-    "watch-bsnc_vat_0010": "cds watch --open bsnc_vat_0010/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-bsnc_vat_0010": "cds watch --open bsnc_vat_0010/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0020": "cds watch --open bsnc_vat_0020/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -45,6 +46,7 @@
   },
   "sapux": [
     "app/bsnc_vat_0000",
-    "app/bsnc_vat_0010"
+    "app/bsnc_vat_0010",
+    "app/bsnc_vat_0020"
   ]
 }
