--- a/app/bsnc_vat_0030/webapp/manifest.json
+++ b/app/bsnc_vat_0030/webapp/manifest.json
@@ -132,7 +132,23 @@
           "options": {
             "settings": {
               "editableHeaderContent": false,
-              "entitySet": "BSNC_VAT_0030H"
+              "entitySet": "BSNC_VAT_0030H",
+              "navigation": {},
+                            "controlConfiguration": {
+                                "BSNC_VAT_0030L/@com.sap.vocabularies.UI.v1.LineItem": {
+                                    "tableSettings": {
+                                        "type": "ResponsiveTable",
+                                        "personalization": {
+                                            "column": true,
+                                            "sort": true
+                                        },
+                                        "creationMode": {
+                                            "name": "Inline",
+                                            "createAtEnd": true
+                                        }
+                                    }
+                                }
+                            }
             }
           }
         }
