--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@sap/eslint-plugin-ui5-jsdocs": "^2.0.5",
     "@sap/ux-specification": "^1.102.4",
+    "@sapui5/ts-types": "^1.92.2",
+    "eslint": "^7.32.0",
     "sqlite3": "^5.0.4"
   },
   "scripts": {
     "start": "cds run",
     "watch-bsnc_vat_0000": "cds watch --open bsnc_vat_0000/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-bsnc_vat_0010": "cds watch --open bsnc_vat_0010/webapp/index.html?sap-ui-xx-viewCache=false",
-    "watch-bsnc_vat_0020": "cds watch --open bsnc_vat_0020/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-bsnc_vat_0020": "cds watch --open bsnc_vat_0020/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0110": "cds watch --open bsnc_vat_0110/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -47,6 +51,7 @@
   "sapux": [
     "app/bsnc_vat_0000",
     "app/bsnc_vat_0010",
-    "app/bsnc_vat_0020"
+    "app/bsnc_vat_0020",
+    "app/bsnc_vat_0110"
   ]
 }
