--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "watch-bsnc_vat_0000": "cds watch --open bsnc_vat_0000/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-bsnc_vat_0010": "cds watch --open bsnc_vat_0010/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-bsnc_vat_0020": "cds watch --open bsnc_vat_0020/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0030": "cds watch --open bsnc_vat_0030/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0040": "cds watch --open bsnc_vat_0040/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0050": "cds watch --open bsnc_vat_0050/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0060": "cds watch --open bsnc_vat_0060/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0080": "cds watch --open bsnc_vat_0080/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-bsnc_vat_0110": "cds watch --open bsnc_vat_0110/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "eslintConfig": {
@@ -49,6 +54,11 @@
     "app/bsnc_vat_0000",
     "app/bsnc_vat_0010",
     "app/bsnc_vat_0020",
+    "app/bsnc_vat_0030",
+    "app/bsnc_vat_0040",
+    "app/bsnc_vat_0050",
+    "app/bsnc_vat_0060",
+    "app/bsnc_vat_0080",
     "app/bsnc_vat_0110"
   ]
 }
