--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "private": true,
   "dependencies": {
     "@sap/cds": ">=5",
-    "express": "^4"
+    "express": "^4",
+    "hdb": "^0.19.0",
+    "@sap/xssec": "^3",
+    "passport": "^0"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.102.4",
     "sqlite3": "^5.0.4"
+  },
+  "engines": {
+    "node": "^16"
   },
   "scripts": {
     "start": "cds run",
@@ -60,5 +66,20 @@
     "app/bsnc_vat_0060",
     "app/bsnc_vat_0080",
     "app/bsnc_vat_0110"
-  ]
+  ],
+  "cds": {
+    "requires": {
+      "[production]": {
+        "db": {
+          "kind": "hana-cloud"
+        },
+        "auth": {
+          "kind": "xsuaa"
+        }
+      },
+      "db": {
+        "kind": "sql"
+      }
+    }
+  }
 }
